--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ STYLE FOR HEADER STARTS HERE
 }
 h1 {
     font-family: 'Pacifico', cursive;
-    font-size: 6rem;
+    font-size: 5rem;
 	color: #fff;
 	padding-bottom: 0.2em;
 	margin: 0;
@@ -32,7 +32,6 @@ h2 {
 }
 
 h2:first-of-type {
-   
 	font-family: 'Oswald';
 }
 
@@ -54,8 +53,6 @@ tr {
 td {
     width: 20px;
 }
-
-
 
 p.warning{
 	background-color: rgb(253, 155, 66);
@@ -139,7 +136,9 @@ STYLE FOR COLOR PICKER CONTAINER STARTS HERE
 /** 
 STYLE FOR COLOR PICKER CONTAINER ENDS HERE
 **/
-.canvasHeading{
+
+/**STYLE FOR CANVAS H2 **/
+h2.canvasHeading{
 	 font-family: 'Pacifico', cursive;
 	 font-size: 3em;
 	color: rgb(11,143, 213);
